fixed stackoverflow search bug

--- a/client/src/components/StackResults/StackResults.css
+++ b/client/src/components/StackResults/StackResults.css
@@ -1,3 +1,8 @@
 .stack-results {
     background-color:#343637;
 }
+
+.stack-results hr {
+    border-color:rgb(141, 142, 143);
+    margin:10px 0px;
+}
